k8/service.yml
apiVersion: v1
kind: Service
metadata:
  name: infra-monitor-dash-service
  namespace: infra-monitoring
spec:
  selector:
    app: infra
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
