k8/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infra-monitor-dash-ingress
  namespace: infra-monitoring
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: infra-monitor-dash-service
            port:
              number: 8080
